samples/_failures_safe/1761521773_b91d92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7429ac97.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_7429ac97.c:145:5: error: expected identifier or ‘(’ at end of input
  145 |     for (int
      |     ^~~
./samples/SAFE/__tmp_7429ac97.c:145:5: error: expected declaration or statement at end of input
